Fixed toggle player hand visibility bug
Changed the toggle visibility function to accept a custom "flex" display for the card container.
Added margins to HTML sections.

--- a/Base.css
+++ b/Base.css
@@ -1,3 +1,7 @@
+section{
+    margin: 20px 0px;
+}
+
 .PlayerName{
     font-weight: bold;
 }
